# litestar-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  makefile  pyproject.toml
migrations/: env.py
migrations/versions/: 01_3d1a9bc30546_initial.py  02_82e484eb7a8e_unique.py
nats/: nats.conf
src/: __main__.py
src/api/: setup.py
src/api/common/: exceptions.py  tools.py
src/api/server/: __init__.py  granian.py
src/api/v1/: constants.py  di.py  permission.py  setup.py
src/common/: converters.py  exceptions.py  logger.py
src/common/di/: __init__.py  base.py  container.py  marker.py
src/common/dtos/: __init__.py  auth.py  base.py  role.py  status.py  token.py  user.py
src/common/interfaces/: crud.py  gateway.py  hasher.py  repository.py
src/common/security/: __init__.py  aes.py  jwt.py
src/common/serializers/: msgspec.py
src/common/tools/: __init__.py  cache.py  files.py  singleton.py  text.py  types.py
src/core/: logger.py  settings.py
src/core/server/: __init__.py  granian.py
src/database/: __init__.py  _utils.py  connection.py  tools.py  types.py
src/database/core/: manager.py
src/database/interfaces/: gateway.py
src/database/models/: __init__.py  role.py  types.py  user.py
src/database/repositories/: __init__.py  base.py  crud.py  role.py  user.py
src/services/: __init__.py
src/services/cache/: redis.py
src/services/interfaces/: encrypt.py
src/services/internal/: __init__.py  auth.py  role.py  user.py
src/services/provider/: aiohttp.py  base.py  (+3 more)
tests/: conftest.py
(+64 files in other folders)
